don't set the "disable during load" popup blocking pref (bug 155351)